# Monocular-Visual-Odometry

./: .gitignore  main_script.m  test_essentialmatrix.m  test_weightedRANSAC.m
@Environment/: Environment.m  plot_state.m  print_logs.m
@HYUNDAI/: HYUNDAI.m  get_current_image.m  read.m  synchronize.m
@KITTI/: KITTI.m  get_R_ci.m  get_R_gc_Tab.m  get_R_gi_Tab.m  get_R_ic.m  get_base_dir.m  get_calib_dir.m  get_current_image.m  get_identifier.m  get_im_init.m  get_im_left_dir.m  get_im_length.m  get_im_right_dir.m  get_im_size.m  get_imu_Tab.m  get_intrinsic.m  get_p_ci.m  get_p_gc_Tab.m  get_p_gi_Tab.m  get_p_ic.m  get_q_gi_Tab.m  get_step.m  get_type.m  read.m  setupParams.m
@VIRTUAL/: VIRTUAL.m  get_current_feature.m  read.m
@vo_mono/: add_feature.m  backup.m  calculate_essential.m  calculate_motion.m  calculate_scale.m  calculate_scale_error.m  delete_dead_features.m  eight_point_essential_hypothesis.m  essential_model_error.m  extract_features.m  features2points.m  findPoseFrom3DPoints.m  get_nFeature.m  get_nFeature2DInliered.m  get_nFeature3DReconstructed.m  get_nFeatureInlier.m  get_nFeatureMatched.m  initialize.m  klt_tracker.m  plot_state.m  print_logs.m  process.m  refresh.m  reload.m  run.m  scale_propagation.m  seek_index.m  set_image.m  text_write.m  update3DPoints.m  update_bucket.m  update_features.m  verify_solutions.m  virtual_add_feature.m  virtual_add_features.m  virtual_run.m  virtual_set_features.m  virtual_update_features.m  vo_mono.m
cpp/: CMakeLists.txt  Doxyfile  validate_all.sh  validate_each.sh
cpp/config/: camera.yaml  esim.yaml  hyundai.yaml  jetson.yaml  kitti.yaml  kitti_0926.yaml  kitti_0928.yaml  kitti_0929.yaml  kitti_0930.yaml  kitti_1003.yaml  template.yaml
cpp/include/: numerics.hpp
cpp/include/core/: DepthFilter.hpp  MVO.hpp  Ransac.hpp  Viewer.hpp  common.hpp  depthFilter.hpp  g2o.hpp  imageProc.hpp  numerics.hpp  parser.hpp  random.hpp  ransac.hpp  time.hpp  utils.hpp
cpp/include/visualization/: plot.hpp
cpp/src/: main.cpp  main_mono.cpp  main_stereo.cpp
cpp/src/core/: DepthFilter.cpp  MVO.cpp  depthFilter.cpp  function.cpp  g2o.cpp  imageProc.cpp  mapping.cpp  numerics.cpp  random.cpp  ransac.cpp  reconstruction.cpp  time.cpp  tracking.cpp  utils.cpp
cpp/src/visualization/: plot.cpp
matlab/: README.md  analyse_runtime.m  main_script.m  test.m  test_weightedRANSAC.m
matlab/@Environment/: Environment.m
matlab/@HYUNDAI/: end_of_file.m  read.m  setupParams.m
matlab/@KITTI/: KITTI.m  get_current_image.m  read.m  setupParams.m
matlab/@vo_mono/: add_feature.m  add_features.m  backup.m  calculate_essential.m  calculate_motion.m  calculate_scale_error.m  contructDepth.m  delete_dead_features.m  extract_features.m  features2points.m  findPoseFrom3DPoints.m  refresh.m  reload.m  run.m  scale_propagation.m  set_image.m  update_features.m  vo_mono.m
matlab/utils/: openFiles.m  randidx.m
matlab/utils/dataset_tools-master/: dataset_load_test.m  dataset_plot_body.m  dataset_plot_inertial_sensor_measurements.m  dataset_plot_target_observations.m  dataset_read_yaml.m  readme
matlab/utils/dataset_tools-master/quaternion/: q_C2q.m  q_inv.m  q_mul_multi.m  q_r2R.m  q_w2Omega.m  skewOp.m
utils/: DBSCAN.m  VideoMerger.m  calculate_rpe.m  convert_q2r.m  convert_r2q.m  displayImages.m  draw_camera.m  dynamic_kmeans.m  extension.m  extract_pattern.m  feature_fast.m  feature_harris.m  feature_sift.m  feature_surf.m  findScale.m  flow2ToColor.m  hypothesis_clustering.m  idx_mat2vec.m  idx_vec2mat.m  makeAssociations.m  makeRefinedSequences.m  parseOdometryFromDSO.m  ransac.m  recordSequence.m  renameFiles.m  skew.m  vec.m  yamlread.m
utils/5-point-algorithm/: test_synth.m
utils/5-point-algorithm-MATLAB-master/: fivePoint.m
utils/dataset_tools-master/: dataset_load.m  dataset_load_sensor_data.m  dataset_plot.m  dataset_plot_body_trajectory.m
utils/dataset_tools-master/quaternion/: q_min.m  q_mul.m  q_norm.m  q_plotPose.m  q_q2C.m  q_q2MR.m  q_r2S.m  q_smallErrorQuaternion.m
utils/kerl/: dense_LM_kerl.m  dense_LM_kerl.prj  deriveErrAnalytic.m  downscaleDepth.m  downscaleImage.m  kerl.fig  mirt2D_mexinterp.mexw64  transform_kerl.m
utils/kerl/codegen/mex/dense_LM_kerl/html/: dense_LM_kerl1_mcode.html  dense_LM_kerl1_watch.html  downscaleImage20_mcode.html  downscaleImage20_watch.html  downscaleImage26_mcode.html  downscaleImage26_watch.html  downscaleImage2_mcode.html  downscaleImage2_watch.html  downscaleImage32_mcode.html  downscaleImage32_watch.html  downscaleImage38_mcode.html  downscaleImage38_watch.html  downscaleImage44_mcode.html  downscaleImage44_watch.html  downscaleImage50_mcode.html  downscaleImage50_watch.html  downscaleImage56_mcode.html  downscaleImage56_watch.html  downscaleImage62_mcode.html  downscaleImage62_watch.html  downscaleImage68_mcode.html  downscaleImage68_watch.html  index.html
utils/pcolor3/: pcolor3.m  pcolor3_documentation.m
utils/rv/: main_original_cvpr.m  main_parameter_tuned_cvpr.m
utils/rv/fast_Kmeans/: alldist.m  anchors.m  calcdist.m
utils/rv/spectral_clutering/: spectral_clustering.m
